--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "styled-components": "^5.0.0"
+
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.8.0",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "typescript": "^4.1.3"
